css/backoffice/components/_datatable.scss
/*!
 * @copyright   Copyright (C) 2010-2021 Combodo SARL
 * @license     http://opensource.org/licenses/AGPL-3.0
 */

$ibo-datatable--toolbar--padding-x: 6px !default;
$ibo-datatable--toolbar--padding-y: 0 !default;
$ibo-datatable--toolbar--text-color: $ibo-color-grey-700 !default;
$ibo-datatable--toolbar--elements-spacing: 1rem !default;
$ibo-datatable--toolbar--table-spacing: 18px !default;
$ibo-datatable-panel--table-spacing: 48px !default;

$ibo-datatable-panel--body--padding: $ibo-panel--body--padding-top 0px $ibo-panel--body--padding-bottom !default;
$ibo-datatable--selection-validation-buttons-toolbar--margin-top: 10px !default;
$ibo-list-column--max-height: 150px !default;

$ibo-datatable--sort-order--color: $ibo-color-orange-600 !default;

.ibo-datatable--toolbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: $ibo-datatable--toolbar--padding-y $ibo-datatable--toolbar--padding-x;

  color: $ibo-datatable--toolbar--text-color;
  @extend %ibo-font-ral-med-100;

  /* Above the table */
  &:first-child {
    margin-bottom: $ibo-datatable--toolbar--table-spacing;
  }

  /* below the table */
  &:not(:first-child) {
    margin-top: $ibo-datatable--toolbar--table-spacing;
  }
}

.ibo-datatable--toolbar-left,
.ibo-datatable--toolbar-right {
  @extend %ibo-fully-centered-content;

  > *:not(:first-child) {
    margin-left: $ibo-datatable--toolbar--elements-spacing;
  }
}

/* TODO 3.0.0: The lines below need to be refactored / placed in the right places (integrations, dedicated block / page, ...) */
.ibo-datatable-panel > .ibo-panel--body {
  padding: $ibo-datatable-panel--body--padding;
}

// For cancel / OK / next... selection validation buttons
.ibo-datatable--selection-validation-buttons-toolbar {
  clear: both;
  margin-top: $ibo-datatable--selection-validation-buttons-toolbar--margin-top;
}

.ibo-list-column {
  max-height: $ibo-list-column--max-height;
  overflow-y: auto;
}

.ibo-datatable .ibo-field-badge {
	margin: 0;
	padding: 0px 4px;
}

// Datatables configure this list dialog
// Could be in a separate component, but is only used in datatables as of now

.ibo-sort-order{
  &::after{
    @extend %fa-solid-base;
    color: $ibo-datatable--sort-order--color;
  }
  &.ibo-is-descending::after{
    content: '\f0dd';
  }
  &.ibo-is-ascending::after{
    content: '\f0de';
  }
  &.ibo-is-none::after{
    content: '\f0dc';
  }
}

